Source/WebCore/platform/spi/cocoa/AVKitSPI.h
@@ -88,8 +88,8 @@ typedef NSInteger AVPlayerViewControllerOptimizedFullscreenStopReason;
 - (void)enterFullScreenAnimated:(BOOL)animated completionHandler:(void (^)(BOOL success, NSError *))completionHandler;
 - (void)exitFullScreenAnimated:(BOOL)animated completionHandler:(void (^)(BOOL success, NSError *))completionHandler;
 
+- (BOOL)isOptimizedFullscreenPossible;
 - (void)startOptimizedFullscreen;
-- (void)startOptimizedFullscreenWithStartCompletionHandler:(void (^)(BOOL success, NSError*))startCompletionHandler stopCompletionHandler:(void (^)(AVPlayerViewControllerOptimizedFullscreenStopReason))stopCompletionHandler;
 - (void)stopOptimizedFullscreen;
 - (void)setAllowsOptimizedFullscreen:(BOOL)allowsOptimizedFullscreen;
 
